--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_TAG: latest
+    IMAGE_TAG: v1
     REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline
 
 phases:
