--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ env:
   variables:
     IMAGE_TAG: latest
     REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline
+  # DO NOT hardcode credentials here. Use environment variables or Secrets Manager instead.
+  # Make sure DOCKERHUB_USERNAME and DOCKERHUB_PASSWORD are set in CodeBuild environment variables or Secrets Manager
 
 phases:
   install:
@@ -13,12 +15,6 @@ phases:
       - echo Installing Docker and dependencies...
       - echo Logging in to Docker Hub...
       - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
-    phases:
-      install:
-       commands:
-      - echo Logging in to Docker Hub...
-      - echo "Ishu@7032645740" | docker login --username "ishwarya2001" --password-stdin
-
     finally:
       - echo Install phase completed.
 
