--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,38 +2,38 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_TAG: latest
-    REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline
+    IMAGE_TAG: "latest"
+    REPO_URI: "316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline"
 
 phases:
   install:
     runtime-versions:
       docker: 20
     commands:
-      - echo Installing Docker and dependencies...
-      - echo Logging in to Docker Hub...
-      - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
+      - echo "Installing Docker and dependencies..."
+      - echo "Logging in to Docker Hub..."
+      - echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
 
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Logging in to Amazon ECR..."
       - aws --version
-      - echo Authenticating Docker to $REPO_URI
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPO_URI
+      - echo "Authenticating Docker to $REPO_URI"
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin "$REPO_URI"
       - export IMAGE_URI="$REPO_URI:$IMAGE_TAG"
-      - echo Docker image will be: $IMAGE_URI
+      - echo "Docker image will be: $IMAGE_URI"
 
   build:
     commands:
-      - echo Building Docker image...
-      - docker build -t $IMAGE_URI .
+      - echo "Building Docker image..."
+      - docker build -t "$IMAGE_URI" .
 
   post_build:
     commands:
-      - echo Pushing image to ECR...
-      - docker push $IMAGE_URI
-      - echo Image successfully pushed.
-      - echo Build process completed.  # Moved from 'finally'
+      - echo "Pushing image to ECR..."
+      - docker push "$IMAGE_URI"
+      - echo "Image successfully pushed."
+      - echo "Build process completed."
 
 artifacts:
   files:
