--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_TAG: "latest"
-    REPO_URI: "316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline"
+    IMAGE_TAG: latest
+    REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/Testingpipeline
 
 phases:
   install:
@@ -12,7 +12,7 @@ phases:
     commands:
       - echo "Installing Docker and dependencies..."
       - echo "Logging in to Docker Hub..."
-      - echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+      - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
 
   pre_build:
     commands:
@@ -26,14 +26,17 @@ phases:
   build:
     commands:
       - echo "Building Docker image..."
-      - docker build -t "$IMAGE_URI" .
+      - docker build -t $IMAGE_URI .
 
   post_build:
     commands:
       - echo "Pushing image to ECR..."
-      - docker push "$IMAGE_URI"
+      - docker push $IMAGE_URI
       - echo "Image successfully pushed."
-      - echo "Build process completed."
+
+finally:
+  commands:
+    - echo "Build process completed."
 
 artifacts:
   files:
