--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,40 +3,34 @@ version: 0.2
 env:
   variables:
     IMAGE_TAG: latest
-    REPO_URI: 316497517854.dkr.ecr.ap-south-1.amazonaws.com/codepipeline
+    REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/application
 
 phases:
   install:
     runtime-versions:
       docker: 20
     commands:
-      - echo "Installing Docker and dependencies..."
-      - echo "Logging in to Docker Hub..."
-      - echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
+      - echo Logging into Docker Hub...
+      - export DOCKERHUB_SECRET=$(aws secretsmanager get-secret-value --secret-id dockerhub/creds --query SecretString --output text)
+      - export DOCKERHUB_USERNAME=$(echo $DOCKERHUB_SECRET | jq -r .username)
+      - export DOCKERHUB_PASSWORD=$(echo $DOCKERHUB_SECRET | jq -r .password)
+      - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
   pre_build:
     commands:
-      - echo "Logging in to Amazon ECR..."
-      - aws --version
-      - echo "Authenticating Docker to $REPO_URI"
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin "$REPO_URI"
-      - export IMAGE_URI="$REPO_URI:$IMAGE_TAG"
-      - echo "Docker image will be: $IMAGE_URI"
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPO_URI
+      - export IMAGE_URI=$REPO_URI:$IMAGE_TAG
 
   build:
     commands:
-      - echo "Building Docker image..."
+      - echo Building Docker image...
       - docker build -t $IMAGE_URI .
 
   post_build:
     commands:
-      - echo "Pushing image to ECR..."
+      - echo Pushing Docker image to ECR...
       - docker push $IMAGE_URI
-      - echo "Image successfully pushed."
-
-finally:
-  commands:
-    - echo "Build process completed."
 
 artifacts:
   files:
