--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,13 @@ env:
   variables:
     IMAGE_TAG: latest
     REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/application
+    DOCKERHUB_USERNAME: ishwarya2001
+    DOCKERHUB_PASSWORD: Ishu@7032645740
 
 phases:
   install:
     commands:
       - echo Logging into Docker Hub...
-      - export DOCKERHUB_SECRET=$(aws secretsmanager get-secret-value --secret-id dockerhub/creds --query SecretString --output text)
-      - export DOCKERHUB_USERNAME=$(echo $DOCKERHUB_SECRET | jq -r .username)
-      - export DOCKERHUB_PASSWORD=$(echo $DOCKERHUB_SECRET | jq -r .password)
       - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
   pre_build:
