--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,13 +5,13 @@ env:
     IMAGE_TAG: latest
     REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/application
     DOCKERHUB_USERNAME: ishwarya2001
-    DOCKERHUB_PASSWORD: Ishu@7032645740
+    DOCKERHUB_PASSWORD: SXNodUA3MDMyNjQ1NzQw  # base64 of your real password
 
 phases:
   install:
     commands:
       - echo Logging into Docker Hub...
-      - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - echo "$DOCKERHUB_PASSWORD" | base64 --decode | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
   pre_build:
     commands:
