--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   install:
     commands:
       - |
-      - echo Logging into Docker Hub...
+      - echo "Logging into Docker Hub..."
       - echo "DOCKERHUB_USERNAME is set to: $DOCKERHUB_USERNAME"
       - echo "DOCKERHUB_PASSWORD length: ${#DOCKERHUB_PASSWORD}"
       - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
