--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,8 @@ env:
 phases:
   install:
     commands:
-      - |
-      - echo "Logging into Docker Hub..."
-      - echo "DOCKERHUB_USERNAME is set to: $DOCKERHUB_USERNAME"
-      - echo "DOCKERHUB_PASSWORD length: ${#DOCKERHUB_PASSWORD}"
+      - echo Logging into Docker Hub...
+      - echo "Username: $DOCKERHUB_USERNAME"
       - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
 
   pre_build:
@@ -34,4 +32,4 @@ phases:
 
 artifacts:
   files:
-      - '**/*'
+    - '**/*'
