--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,9 +12,9 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 316497517854.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 316497517854.dkr.ecr.us-east-1.amazonaws.com
       - export IMAGE_TAG=latest
-      - export IMAGE_URI=316497517854.dkr.ecr.us-east-1.amazonaws.com/application:$IMAGE_TAG
+      - export IMAGE_URI=316497517854.dkr.ecr.ap-south-1.amazonaws.com/application:$IMAGE_TAG
 
   build:
     commands:
