--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,21 +3,19 @@ version: 0.2
 env:
   variables:
     IMAGE_TAG: latest
-    REPO_URI: 316497517854.dkr.ecr.ap-south-1.amazonaws.com/application
+    REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/application
 
 phases:
   install:
     runtime-versions:
-      python: 3.8  # Needed for `aws` and `jq` utilities
+      python: 3.8
     commands:
-      - echo Installing dependencies...
+      - echo Installing jq...
       - yum install -y jq
-
       - echo Retrieving DockerHub credentials from Secrets Manager...
       - DOCKERHUB_SECRET=$(aws secretsmanager get-secret-value --secret-id dockerhub/secrets --query SecretString --output text)
       - DOCKERHUB_USERNAME=$(echo "$DOCKERHUB_SECRET" | jq -r .username)
       - DOCKERHUB_PASSWORD=$(echo "$DOCKERHUB_SECRET" | jq -r .password)
-
       - echo Logging in to Docker Hub...
       - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
@@ -25,7 +23,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $REPO_URI
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPO_URI
       - export IMAGE_URI=$REPO_URI:$IMAGE_TAG
       - echo Docker image URI: $IMAGE_URI
 
