--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,43 +1,59 @@
 version: 0.2
-
+ 
 env:
+
   variables:
+
     IMAGE_TAG: latest
-    REPO_URI: 316497517854.dkr.ecr.us-east-1.amazonaws.com/application
 
+    REPO_URI: 316497517854.dkr.ecr.ap-south-1.amazonaws.com/application
+
+    DOCKERHUB_USERNAME: ishwarya2001
+
+    DOCKERHUB_PASSWORD: Ishu@7032645740
+ 
 phases:
+
   install:
-    runtime-versions:
-      python: 3.8
+
     commands:
-      - echo Installing jq...
-      - yum install -y jq
-      - echo Retrieving DockerHub credentials from Secrets Manager...
-      - DOCKERHUB_SECRET=$(aws secretsmanager get-secret-value --secret-id dockerhub/secrets --query SecretString --output text)
-      - DOCKERHUB_USERNAME=$(echo "$DOCKERHUB_SECRET" | jq -r .username)
-      - DOCKERHUB_PASSWORD=$(echo "$DOCKERHUB_SECRET" | jq -r .password)
+
       - echo Logging in to Docker Hub...
-      - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
+      - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
+ 
   pre_build:
+
     commands:
+
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPO_URI
+
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $REPO_URI
+
       - export IMAGE_URI=$REPO_URI:$IMAGE_TAG
-      - echo Docker image URI: $IMAGE_URI
 
+      - echo Docker image will be: $IMAGE_URI
+ 
   build:
+
     commands:
+
       - echo Building Docker image...
+
       - docker build -t $IMAGE_URI .
-
+ 
   post_build:
-    commands:
-      - echo Pushing Docker image to ECR...
-      - docker push $IMAGE_URI
-      - echo Build completed on `date`
 
+    commands:
+
+      - echo Pushing Docker image to ECR...
+
+      - docker push $IMAGE_URI
+ 
 artifacts:
+
   files:
+
     - '**/*'
+
+ 
