--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,9 @@ phases:
     commands:
       - echo "Logging into Docker Hub..."
       - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
+      - echo "Username: $DOCKERHUB_USERNAME"
+      - echo "Password Length: ${#DOCKERHUB_PASSWORD}"
+ 
  
   pre_build:
     commands:
